# venomous-workflow

./: .gitattributes  .tool-versions  Makefile  README.md
app-dashboard/: .gitignore  .prettierignore  .prettierrc.mjs  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
app-dashboard/docker/: Dockerfile.dev  Dockerfile.prod
app-server/: .gitignore  README.md  pyproject.toml  requirements.txt
app-server/accounts/: admin.py  urls.py
app-server/accounts/common/: constants.py
app-server/accounts/migrations/: 0001_initial.py  0002_modify_customusermodel.py
app-server/accounts/models/: __init__.py  custom_user.py
app-server/accounts/serializers/: __init__.py  account_signup.py  account_user.py
app-server/accounts/views/: __init__.py  account_refresh_accesstoken.py  account_signin.py  account_signout.py  account_signup.py  account_user.py
app-server/configs/: urls.py
app-server/configs/middlewares/: __init__.py  convert_response_request.py
app-server/configs/settings/: __init__.py  base.py  development.py  production.py
app-server/docker/: Dockerfile.prod
app-server/workflows/: admin.py  urls.py
app-server/workflows/common/: __init__.py  supported_node_logic.py  supported_node_type.py  validate_node_form_value.py
app-server/workflows/migrations/: 0001_initial_workfalowdata.py
app-server/workflows/models/: workflow_data.py
app-server/workflows/serializers/: workflow_data.py
app-server/workflows/views/: __init__.py  workflow_data.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml
(+157 files in other folders)
